finish basic html for pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AniMate | Home</title>
+    <meta name="description" content="The home page for AniMate, an anime searching and tracking application.">
+    <meta name="author" content="Erin Major">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header></header>
