--- a/lists.html
+++ b/lists.html
@@ -5,12 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AniMate | My Lists</title>
+    <meta name="description" content="The my lists for AniMate, an anime searching and tracking application.">
+    <meta name="author" content="Erin Major">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
     <header></header>
     <nav></nav>
-    <main></main>
+    <main>
+        <section id="watchlist">
+            <h2>Watchlist</h2>
+        </section>
+        <section id="watchedList">
+            <h2>Watched List</h2>
+        </section>
+    </main>
 
     <footer></footer>
 </body>
