--- a/search.html
+++ b/search.html
@@ -5,13 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AniMate | Search</title>
+    <meta name="description" content="The search page for AniMate, an anime searching and tracking application.">
+    <meta name="author" content="Erin Major">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
     <header></header>
     <nav></nav>
-    <main></main>
-
+    <main>
+        <div id="searchBox">
+            <input type="text" id="searchInput" placeholder="Search for an anime...">
+            <label><input type="checkbox" id="titleSearch" name="searchType" value="yes">Search by Title</label><br>
+            <label><input type="checkbox" id="genreSearch" name="searchType" value="yes">Search by Title</label>
+            <button id="searchButton">Search</button>
+        </div>
+        <section id="results">
+        </section>
+    </main>
     <footer></footer>
 </body>
 
