add basic css file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,12 @@
     <meta name="description" content="The home page for AniMate, an anime searching and tracking application.">
     <meta name="author" content="Erin Major">
     <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Reenie+Beanie&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header></header>
     <nav></nav>
@@ -41,7 +47,8 @@
             <p></p>
         </section>
     </main>
-    
+
     <footer></footer>
 </body>
+
 </html>
