add footer and get it to load

--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header></header>
+    <header id="header"></header>
     <nav></nav>
     <main>
         <div id="searchBox">
@@ -27,7 +27,7 @@
         <section id="results">
         </section>
     </main>
-    <footer></footer>
+    <footer id="footer"></footer>
 </body>
 
 </html>
