--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Reenie+Beanie&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/main.js" type="module"></script>
 </head>
 
 <body>
-    <header></header>
+    <header id="header"></header>
     <nav></nav>
     <main>
         <section>
@@ -48,7 +49,7 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer id="footer"></footer>
 </body>
 
 </html>
