--- a/lists.html
+++ b/lists.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header></header>
+    <header id="header"></header>
     <nav></nav>
     <main>
         <section id="watchlist">
@@ -26,7 +26,7 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer id="footer"></footer>
 </body>
 
 </html>
