--- a/references.html
+++ b/references.html
@@ -28,6 +28,8 @@ November 21, 2025.</p>
 <p>Brian Rofiq / RapidAPI. (n.d.). Anime-DB (rapidapi) API. RapidAPI.
 https://rapidapi.com/brian.rofiq/api/anime-db/playground/apiendpoint_d5c3dae2-6017-48df-a7cd-be65865d15bc
 </p>
+<p>Artflow. (n.d.). Generated December 2, 2025, from https://app.artflow.ai/
+</p>
 
 </body>
 
