--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header id="header"></header>
-    <nav></nav>
+    <nav id="nav"></nav>
     <main>
         <section>
             <h2></h2>
