--- a/lists.html
+++ b/lists.html
@@ -16,7 +16,7 @@
 
 <body>
     <header id="header"></header>
-    <nav></nav>
+    <nav id="nav"></nav>
     <main>
         <section id="watchlist">
             <h2>Watchlist</h2>
