--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
 
 <body>
     <header id="header"></header>
-    <nav></nav>
+    <nav id="nav"></nav>
     <main>
         <div id="searchBox">
             <input type="text" id="searchInput" placeholder="Search for an anime...">
