start adding styling

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Reenie+Beanie&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/main.js" type="module"></script>
+    <script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header id="header"></header>
-    <nav id="nav"></nav>
+    <nav id="nav" class="close"></nav>
     <main>
         <section>
             <h2></h2>
