--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header id="header"></header>
-    <nav id="nav" class="close"></nav>
+    <nav id="nav" class="open"></nav>
     <main>
         <section>
             <h2></h2>
