add info to home page

--- a/references.html
+++ b/references.html
@@ -32,7 +32,7 @@ https://rapidapi.com/brian.rofiq/api/anime-db/playground/apiendpoint_d5c3dae2-60
 </p>
 <p>Anthropic. (2025). Claude Haiku 4.5 in GitHub Copilot [Large language model]. GitHub.</p>
 <p>Font Awesome. (n.d.). Th-large icon. Retrieved December 4, 2025, from https://fontawesome.com/icons/th-large</p>
-
+<p>Anime. (n.d.). In Wikipedia. Retrieved December 6, 2025, from https://en.wikipedia.org/wiki/Anime</p>
 </body>
 
 </html>
