add genre searching

--- a/lists.html
+++ b/lists.html
@@ -20,7 +20,7 @@
 
 <body>
     <header id="header"></header>
-    <nav id="nav"></nav>
+    <nav id="nav" class="close"></nav>
     <main>
         <section id="watchlist">
             <h2>Watchlist</h2>
