--- a/search.html
+++ b/search.html
@@ -21,7 +21,7 @@
 
 <body>
     <header id="header"></header>
-    <nav id="nav"></nav>
+    <nav id="nav" class="close"></nav>
     <main>
         <div id="searchBox">
             <input type="text" id="searchInput" placeholder="Search for an anime...">
