finish styling for search

--- a/search.html
+++ b/search.html
@@ -30,6 +30,7 @@
             <button id="searchButton">Search</button>
         </form>
         <section id="results">
+            <p id="emptyResults">Enter a search for results</p>
         </section>
     </main>
     <footer id="footer"></footer>
