--- a/index.html
+++ b/index.html
@@ -19,29 +19,14 @@
 <body>
     <header id="header"></header>
     <main>
-        <section>
+        <section id="intro">
             <h2>What is anime?</h2>
             <p>Anime is animation originating from Japan. Outside Japan and in English, anime refers specifically to animation produced in Japan. However, anime, in Japan and in Japanese, describes all animated works, regardless of style or origin. Many works of animation with a similar style to Japanese animation are also produced outside Japan. Video games sometimes also feature themes and art styles that may be labelled as anime. <br><br>The earliest commercial Japanese animation dates to 1917. A characteristic art style emerged in the 1960s with the works of cartoonist Osamu Tezuka and spread in the following decades, developing a large domestic audience. Anime is distributed theatrically, through television broadcasts, directly to home media, and over the Internet. In addition to original works, anime are often adaptations of Japanese comics (manga), light novels, or video games. It is classified into numerous genres targeting various broad and niche audiences. (“Anime,” n.d.)</p>
             <img>
             <p></p>
         </section>
-        <section>
-            <h2></h2>
-            <div>
-                <h3></h3>
-                <p></p>
-                <img>
-            </div>
-            <div>
-                <h3></h3>
-                <p></p>
-                <img>
-            </div>
-            <div>
-                <h3></h3>
-                <p></p>
-                <img>
-            </div>
+        <section id="randomAnime">
+            <h2>Recommendations</h2>           
         </section>
         <section>
             <h2></h2>
