style lists page

--- a/lists.html
+++ b/lists.html
@@ -22,11 +22,11 @@
     <header id="header"></header>
     <nav id="nav" class="close"></nav>
     <main>
+        <h2 class="listHeading">Watchlist</h2>
         <section id="watchlist">
-            <h2>Watchlist</h2>
         </section>
-        <section id="watchedList">
-            <h2>Watched List</h2>
+        <h2 class="listHeading">Watched List</h2>
+        <section id="watchedList">            
         </section>
     </main>
 
