small style and variable adjustments

--- a/lists.html
+++ b/lists.html
@@ -25,8 +25,8 @@
         <h2 class="listHeading">Watchlist</h2>
         <section id="watchlist">
         </section>
-        <h2 class="listHeading">Watched List</h2>
-        <section id="watchedList">            
+        <h2 class="listHeading">Watched Archive</h2>
+        <section id="archive">            
         </section>
     </main>
 
