--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Reenie+Beanie&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Reenie+Beanie&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/main.js" type="module" defer></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -21,7 +24,35 @@
     <main id="home-page">
         <section id="intro">
             <h2>What is anime?</h2>
-            <p>Anime is animation originating from Japan. Outside Japan and in English, anime refers specifically to animation produced in Japan. However, anime, in Japan and in Japanese, describes all animated works, regardless of style or origin. Many works of animation with a similar style to Japanese animation are also produced outside Japan. Video games sometimes also feature themes and art styles that may be labelled as anime. <br><br>The earliest commercial Japanese animation dates to 1917. A characteristic art style emerged in the 1960s with the works of cartoonist Osamu Tezuka and spread in the following decades, developing a large domestic audience. Anime is distributed theatrically, through television broadcasts, directly to home media, and over the Internet. In addition to original works, anime are often adaptations of Japanese comics (manga), light novels, or video games. It is classified into numerous genres targeting various broad and niche audiences. (“Anime,” n.d.)</p>
+            <p class="long">Anime is animation originating from Japan. Outside Japan and in English, anime refers
+                specifically to animation produced in Japan. However, anime, in Japan and in Japanese, describes all
+                animated works, regardless of style or origin. Many works of animation with a similar style to Japanese
+                animation are also produced outside Japan. Video games sometimes also feature themes and art styles that
+                may be labelled as anime. <br><br>The earliest commercial Japanese animation dates to 1917. A
+                characteristic art style emerged in the 1960s with the works of cartoonist Osamu Tezuka and spread in
+                the following decades, developing a large domestic audience. Anime is distributed theatrically, through
+                television broadcasts, directly to home media, and over the Internet. In addition to original works,
+                anime are often adaptations of Japanese comics (manga), light novels, or video games. It is classified
+                into numerous genres targeting various broad and niche audiences. <br><br>Anime is a diverse medium with
+                distinctive production methods that have adapted in response to emergent technologies. Predominantly
+                hand-drawn, even into the modern day, anime combines graphic art, characterization, cinematography, and
+                other forms of imaginative and individualistic techniques. Compared to Western animation, anime
+                production generally focuses less on movement and more on the detail of settings and use of "camera
+                effects", such as panning, zooming, and angle shots. Diverse art styles are used, and character
+                proportions and features can be quite varied, with a common characteristic feature being large and
+                emotive eyes. <br><br>The anime industry consists of over 430 production companies...Since the 1980s,
+                the medium has also seen widespread international success with the rise of foreign dubbed and subtitled
+                programming, and since the 2010s due to the rise of streaming services and a widening demographic
+                embrace of anime culture, both within Japan and worldwide. As of 2016, Japanese animation accounted for
+                60% of the world's animated television shows. By 2022, anime had become one of the fastest-growing
+                genres of content globally. The medium is currently characterised by increased globalisation, expansive
+                cross-cultural collaboration, and significant brand integration, as Japanese-produced animation
+                continues to influence and shape media and popular culture on a global scale. (“Anime,” n.d.)</p>
+            <p class="short">Anime is animation originating from Japan. Outside Japan and in English, anime refers specifically to animation produced in Japan. However, anime, in Japan and in Japanese, describes all animated works, regardless of
+                style or origin. Many works of animation with a similar style to Japanese animation are also produced outside Japan. Video games sometimes also feature themes and art styles that may be labelled as anime. <br><br>The
+                earliest commercial Japanese animation dates to 1917. A characteristic art style emerged in the 1960s with the works of cartoonist Osamu Tezuka and spread in the following decades, developing a large domestic audience. Anime
+                is distributed theatrically, through television broadcasts, directly to home media, and over the Internet. In addition to original works, anime are often adaptations of Japanese comics (manga), light novels, or video games. It is
+                classified into numerous genres targeting various broad and niche audiences. </p>
         </section>
         <section id="randomAnime">
             <h2>Recommendations</h2>
