style references page

--- a/references.html
+++ b/references.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body>
+<body id="referencesPage">
    <h1>References</h1>
    <p>ChatGPT. (2025). Manga-style comic panel image [AI-generated image]. OpenAI. Generated in a ChatGPT conversation on
 November 21, 2025.</p>
