first performance improvements

--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="image" href="images/home-page-large.webp"
+        imagesrcset="images/home-page-large.webp 1600w, images/home-page.webp 800w, images/home-page-small.webp 400w"
+        imagesizes="(min-width:80rem) 1600px, (min-width:50rem) 800px, 400px">
     <link
-        href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Reenie+Beanie&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&family=Reenie+Beanie&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/main.js" type="module" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" media="print" onload="this.media='all'" />
+    <noscript>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+    </noscript>
 </head>
 
 <body>
